--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
             <button type="submit">Ấn vào đây để gửi dữ liệu</button>
         </form>
     </div>
+    <div class="content">
+        <h1>Đây là luyện tập Git</h1>
+    </div>
 </body>
 </html>
