--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <button type="submit">Ấn vào đây để gửi dữ liệu</button>
         </form>
     </div>
-    <!-- <div class="content">
+    <div class="content">
         <h1>Đây là luyện tập Git</h1>
-    </div> -->
+        <h2>Lập trình viên 2 đã chỉnh sửa và đẩy lên lần 1</h2>
+    </div> 
 </body>
 </html>
