--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="content">
         <h1>Đây là luyện tập Git</h1>
-        <h2>Lập trình viên 2 đã chỉnh sửa và đẩy lên lần 1 hello everyone </h2>
+        <h2>Lập trình viên 2 đã chỉnh sửa và đẩy lên lần 1 hello everyone 1 </h2>
     </div> 
 </body>
 </html>
